--- a/.github/workflows/aiida.yml
+++ b/.github/workflows/aiida.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Tests
       shell: bash -l {0}
       run: |
-        conda install -c conda-forge papermill
+        conda install -c conda-forge jupyter papermill
         papermill aiida.ipynb aiida-out.ipynb -k "python3"
