--- a/.github/workflows/jobflow.yml
+++ b/.github/workflows/jobflow.yml
@@ -24,4 +24,5 @@ jobs:
       run: |
         pip install -e aiida_qe_basic
         conda install -c conda-forge jupyter papermill
+        export ESPRESSO_PSEUDO=/Users/janssen/Desktop/ADIS2023/espresso/pseudo
         papermill jobflow.ipynb jobflow-out.ipynb -k "python3"
