--- a/.github/workflows/aiida.yml
+++ b/.github/workflows/aiida.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         pip install -e aiida_qe_basic
         conda install -c conda-forge jupyter papermill
-        export ESPRESSO_PSEUDO=/Users/janssen/Desktop/ADIS2023/espresso/pseudo
+        export ESPRESSO_PSEUDO=$(pwd)/espresso/pseudo
         papermill aiida.ipynb aiida-out.ipynb -k "python3"
