--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,5 +1,5 @@
 title: ADIS2023
-author: Marnik Bercx, Janine George, Jan Janssen, Joerg Schaarschmidt
+author: Marnik Bercx, Christina Ertural, Janine George, Jan Janssen, Joerg Schaarschmidt
 logo: images/adislogo.png
 
 execute:
