--- a/.github/workflows/aiida.yml
+++ b/.github/workflows/aiida.yml
@@ -23,5 +23,6 @@ jobs:
       run: |
         pip install -e aiida_qe_basic
         conda install -c conda-forge jupyter papermill
+        verdi presto
         export ESPRESSO_PSEUDO=$(pwd)/espresso/pseudo
         papermill aiida_base.ipynb aiida_base-out.ipynb -k "python3"
