--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,13 @@ channels:
 - conda-forge
 dependencies:
 - python=3.11
-- pyiron_base=0.10.5
-- qe=7.2
+- pyiron_base=0.10.6
+- qe=7.4
 - qe-tools=2.0.0
 - ase=3.23.0
-- matplotlib=3.8.4
-- xmlschema=3.3.1
+- matplotlib=3.9.2
+- xmlschema=3.4.2
 - jobflow=0.1.18
-- pymatgen=2024.3.1
+- pymatgen=2024.10.29
 - aiida-core=2.6.2
-- aiida-core.services
+- aiida-core.services=2.6.2
